--- a/Website/requirements.txt
+++ b/Website/requirements.txt
@@ -7,6 +7,8 @@ django-filter==1.0.4
 docutils==0.13.1
 httpie==0.9.9
 Pillow==3.4.2
-psycopg2==2.7.1
+psycopg2==2.6.1
 requests==2.9.1
 whitenoise==3.3.0
+nltk==3.2.4
+scikit-learn==0.18.2
